# optical-flow

./: .env.example  .gitignore  LICENSE  README.md  module.py  pyproject.toml
notebooks/: face-aligner-with-landmark.ipynb  face-landmark-mediapipe-vision.ipynb  improve-optical-flow-performance.ipynb  optical-flow-tvl1.ipynb
src/face/modules/: __init__.py  face_landmark.py
src/optical_flow/modules/: tvl1.py
