[project]
name = "optical-flow"
version = "0.1.0"
description = "An implementation of optical flow for micro expression analysis for subtle movements"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.32",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]
